public class Main {
    private static Nav nav = new Nav();

    public static void main(String[] args) {
        nav.startMenu();
    }


}